test/deca/syntax/invalid/ifthenelse_elseif_no_if.deca
// Description:
//    test de programme incorrect syntaxiquement
//
// Resultats:
//    ligne 8 : Erreur (on ne peut pas utiliser un else if tout seul)

{
    else if (true) {
    
    }
}